--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-html here
+<html>
+
+<body>
+
+<h1>Marketplace Design Team Newsletters</h1>
+
+<p>There's no HTML at this page. See the <a href="https://github.com/MarketplaceUX/newsletters/tree/gh-pages">list of newsletters</a>.<br/><br/></p>
+
+</body>
+
+</html>
