--- a/emails/email_020215.html
+++ b/emails/email_020215.html
@@ -422,7 +422,7 @@
 															<tr>                   
                     						<td class="mcnTextContent" style="padding-top: 9px;padding-left: 18px;padding-bottom: 9px;padding-right: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-family: Helvetica;font-size: 11px;line-height: 125%;text-align: left;" valign="top">
 <!-- TODO URL TO EMAIL ON GITHUB -->
-                    							<a href="http://marketplaceux.github.io/newsletters/emails/email_020215.html" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-weight: normal;text-decoration: underline;">View this email in your browser</a>
+                    							<a href="http://marketplaceux.github.io/newsletters/emails/email_020215.html" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-weight: normal;text-decoration: underline;">View this email in your browser</a>
 
                     							
                     						</td>
@@ -512,12 +512,12 @@
 <!-- TODO PROJECT 2 -->																	
 																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">Revised Platform Filtering</h4>
 
-																	This week we're testing some options for a sitewide (vs in-page) platform filter. Here's <a href="http://marketplaceux.github.io/marketplacex/ex_platform_filter/desktop.html">one of the options</a> we're testing. We'll also be testing some of the new nav options above.<br>
+																	This week we're testing some options for a sitewide (vs in-page) platform filter. Here's <a target="_blank" href="http://marketplaceux.github.io/marketplacex/ex_platform_filter/desktop.html">one of the options</a> we're testing. We'll also be testing some of the new nav options above.<br>
 																	&nbsp;
 <!-- TODO PROJECT 3 -->																	
 																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">We want your opinions!</h4>
 
-																	By the time you get this, you should have received an invite to complete a survey about the future of Marketplace. If you didn't get the invite, you can <a href="http://www.surveygizmo.com/s3/1987457/Marketplace-Survey-1" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">find the survey here</a>.<br>
+																	By the time you get this, you should have received an invite to complete a survey about the future of Marketplace. If you didn't get the invite, you can <a href="http://www.surveygizmo.com/s3/1987457/Marketplace-Survey-1" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">find the survey here</a>.<br>
 																	&nbsp;
 <!-- TODO COOL 1 -->
 																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">
