--- a/emails/email_020215.html
+++ b/emails/email_020215.html
@@ -517,7 +517,7 @@
 <!-- TODO PROJECT 3 -->																	
 																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">We want your opinions!</h4>
 
-																	By the time you get this, you should have received an invite to complete a survey about the future of Marketplace. If you didn't get the invite, you can <a href="http://www.surveygizmo.com/s3/1987457/Marketplace-Survey-1" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">find the survey here</a>.<br>
+																	By the time you get this, you should have received an invite to complete a survey about the future of Marketplace. If you didn't get the invite, you can <a target="_blank" href="http://www.surveygizmo.com/s3/1987457/Marketplace-Survey-1" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">find the survey here</a>.<br>
 																	&nbsp;
 <!-- TODO COOL 1 -->
 																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">
