--- a/emails/email_020215.html
+++ b/emails/email_020215.html
@@ -512,7 +512,7 @@
 <!-- TODO PROJECT 2 -->																	
 																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">Revised Platform Filtering</h4>
 
-																	This week we're testing some options for a sitewide (vs in-page) platform filter. Here's <a target="_blank" href="http://marketplaceux.github.io/marketplacex/ex_platform_filter/desktop.html">one of the options</a> we're testing. We'll also be testing some of the new nav options above.<br>
+																	This week we're testing some options for a sitewide (vs in-page) platform filter. Here's <a target="_blank" href="http://marketplaceux.github.io/marketplacex/ex_platform_filter/desktop.html" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">one of the options</a> we're testing. We'll also be testing some of the new nav options above.<br>
 																	&nbsp;
 <!-- TODO PROJECT 3 -->																	
 																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">We want your opinions!</h4>
