--- a/emails/email_020215.html
+++ b/emails/email_020215.html
@@ -9,7 +9,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>It's the Marketplace Design Weekly Update!</title>
+<title>Marketplace Design Newsletter</title>
         
 <style type="text/css">
 		body,#bodyTable,#bodyCell{
