--- a/emails/email_020215.html
+++ b/emails/email_020215.html
@@ -515,9 +515,9 @@
 																	This week we're testing some options for a sitewide (vs in-page) platform filter. Here's <a target="_blank" href="http://marketplaceux.github.io/marketplacex/ex_platform_filter/desktop.html" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">one of the options</a> we're testing. We'll also be testing some of the new nav options above.<br>
 																	&nbsp;
 <!-- TODO PROJECT 3 -->																	
-																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">We want your opinions!</h4>
+																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">We want your ideas!</h4>
 
-																	By the time you get this, you should have received an invite to complete a survey about the future of Marketplace. If you didn't get the invite, you can <a target="_blank" href="http://www.surveygizmo.com/s3/1987457/Marketplace-Survey-1" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">find the survey here</a>.<br>
+																	We're gathering information from lots of sources -- internal and external -- about the future of Marketplace. If you haven't already, you'll be hearing from us soon about a survey we're conducting.<br>
 																	&nbsp;
 <!-- TODO COOL 1 -->
 																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">
