--- a/emails/email_020215.html
+++ b/emails/email_020215.html
@@ -517,7 +517,7 @@
 <!-- TODO PROJECT 3 -->																	
 																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">We want your ideas!</h4>
 
-																	We're gathering information from lots of sources -- internal and external -- about the future of Marketplace. If you haven't already, you'll be hearing from us soon about a survey and how to provide feedback throughtout our process.<br>
+																	We're gathering information from lots of sources -- internal and external -- about the future of Marketplace. If you haven't already, you'll be hearing from us soon about a survey and other ways you can contribute.<br>
 																	&nbsp;
 <!-- TODO COOL 1 -->
 																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">
