added cool1 link

--- a/emails/email_030215.html
+++ b/emails/email_030215.html
@@ -529,7 +529,7 @@ We're gathering information from lots of sources -- internal and external -- abo
 
 <!-- TODO COOL 1 -->
 <h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">
-	<a href="http://www.lukew.com/ff/entry.asp?1941=" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Showing Passwords on Lock Screens</a> (<a href="http://www.lukew.com" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">LukeW.com</a>)</h4>
+	<a href="http://sideproject.io/outdated-ux-patterns/" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Outdated UX Patterns</a> (<a href="http://sideproject.io/" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Sideproject</a>)</h4>
 
 <!-- TODO COOL 3 -->
 <h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">
