--- a/emails/email_031615.html
+++ b/emails/email_031615.html
@@ -499,7 +499,7 @@
 			                            <h1 style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 40px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -1px;color: #606060 !important;"><span style="font-size:34px"><span style="color: #000000;">Marketplace Design Newsletter</span></span></h1>
 
 <!-- TODO DATE OF EMAIL -->
-<h3 style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -.5px;color: #606060 !important;"><span style="color:#696969">March 9-13, 2015</span></h3>
+<h3 style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -.5px;color: #606060 !important;"><span style="color:#696969">March 16-21, 2015</span></h3>
 
 																	<h3 class="null" style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -.5px;color: #606060 !important;">&nbsp;</h3>
 
@@ -520,6 +520,13 @@ At our public Marketplace UX meeting last week (every Thursday @ 9am PST! Vidyo:
 &nbsp;
 
 
+<!-- TODO PROJECT 3 -->
+<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">Phil + Liz Design Workweek</h4>
+
+This week Phil and Liz are together in Vancouver for a design workweek. We're focused on bringing the product design strategy to life. We'll be sharing things with you as we go. Keep an eye on our <a target="_blank" href="http://marketplaceux.github.io/mow/">Github project site</a>! PS - We're DND for this week!<br>
+&nbsp;
+
+
 <!-- TODO COOL 1 -->
 <h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">
 	<a href="http://sideproject.io/outdated-ux-patterns/" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Outdated UX Patterns</a> (<a href="http://sideproject.io/" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Sideproject</a>)</h4>
@@ -535,8 +542,8 @@ At our public Marketplace UX meeting last week (every Thursday @ 9am PST! Vidyo:
 
 
 <!-- TODO COOL 4 -->
-
-
+<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;">
+	<a href="https://developers.google.com/design-sprint/downloads/DesignSprintMethods.pdf" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Google Design Sprint Methods</a> (<a href="http://developers.google.com/" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Google Developers</a>)</h4>
 
 
 <!-- END CONTENT -->
