--- a/emails/email_040615.html
+++ b/emails/email_040615.html
@@ -503,17 +503,20 @@
 
 																	<h3 class="null" style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -.5px;color: #606060 !important;">&nbsp;</h3>
 
-																	<h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -.5px;color: #606060 !important;"><span style="color:#000000">Calling all creative people!</span></h3>
-																	&nbsp;
+																	<h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -.5px;color: #606060 !important;"><span style="color:#000000">Calling All Makers!</span></h3>
+																	
 
 <!-- TODO PROJECT 1 -->
-<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;"></h4>
+
+<h4 class="null" style="margin: 0 0 9px 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: normal;text-align: left;color: #808080 !important;"></h4>
 
 We're busy working on system design this week. At the same time, we're also thinking about low-level interactions. We've got a bunch of ideas, but don't want to get trapped in "design fixation" (see the link below!).<br/>
 
-<br/>So we're interested in your thoughts and ideas on specific interactions. Our goal is to collect a few sketches (or prototypes!) from people and discuss them during our regular Thursday meeting.<br/>
+<br/>So we're interested in your thoughts and ideas on specific interactions. We've provided some <a target="_blank" href="https://github.com/MarketplaceUX/mow/issues/6" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">instructions here</a> to get you started.<br/>
 
-<br/>We've provided some <a target="_blank" href="https://github.com/MarketplaceUX/mow/issues/6" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">instructions here</a> to get you started. Feel free to reach our to Phil or Liz if you have any questions. Otherwise we look forward to talking about your ideas on Thursday!<br>
+<br/>Feel free to sketch (or prototype!) your solutions, and <a target="_blank" href="https://github.com/MarketplaceUX/mow/issues/6" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">post them here</a>. We'll discuss them (and more) during this week's design improv on Thursday.<br/>
+
+<br/>Feel free to reach our to Phil or Liz if you have any questions. Otherwise we look forward to talking about your ideas on Thursday!<br>
 &nbsp;
 
 
