--- a/emails/template.html
+++ b/emails/template.html
@@ -457,7 +457,7 @@
 			                    <table class="mcnImageContentContainer" align="left" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
 														<tbody>
 			                      	<tr>
-			                          <td class="mcnImageContent" style="padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;" valign="top"><img alt="Firefox Marketplace" src="http://marketplaceux.github.io/newsletters/img/rocket-bar-600.png" style="max-width: 1280px;padding-bottom: 0;display: inline !important;vertical-align: bottom;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;" class="mcnImage" align="left" width="564">
+			                          <td class="mcnImageContent" style="padding-right: 9px;padding-left: 9px;padding-top: 0;padding-bottom: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;" valign="top"><img alt="Firefox Marketplace" src="http://pwalm.github.io/marketwatch-newsletter/img/market-watch-banner.png" style="max-width: 1280px;padding-bottom: 0;display: inline !important;vertical-align: bottom;border: 0;outline: none;text-decoration: none;-ms-interpolation-mode: bicubic;" class="mcnImage" align="left" width="564">
 																</td>
 			                        </tr>
 			                    	</tbody>
