--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body>
 
-<h1>Marketplace Design Team Newsletters</h1>
+<h1>Market Watch Newsletters</h1>
 
 <p>There's no HTML at this page. See the <a href="https://github.com/MarketplaceUX/newsletters/tree/gh-pages">list of newsletters</a>.<br/><br/></p>
 
