updated template with marketwatch info
also tweaked css

--- a/emails/new-template.html
+++ b/emails/new-template.html
@@ -9,7 +9,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Market Watch Newsletter - Issue #XX - Month 2015</title>
+<title>Market Watch Newsletter - Issue #54 - September 2015</title>
 
 <style type="text/css">
 		body,#bodyTable,#bodyCell{
@@ -82,7 +82,7 @@
 			color:#606060 !important;
 			display:block;
 			font-family:Helvetica;
-			font-size:40px;
+			font-size:30px;
 			font-style:normal;
 			font-weight:bold;
 			line-height:125%;
@@ -94,7 +94,7 @@
 			color:#404040 !important;
 			display:block;
 			font-family:Helvetica;
-			font-size:26px;
+			font-size:20px;
 			font-style:normal;
 			font-weight:bold;
 			line-height:125%;
@@ -106,7 +106,7 @@
 			color:#606060 !important;
 			display:block;
 			font-family:Helvetica;
-			font-size:18px;
+			font-size:16px;
 			font-style:normal;
 			font-weight:bold;
 			line-height:125%;
@@ -497,22 +497,21 @@
 			                    		<tr>
 
 			                        	<td colspan="2" class="mcnTextContent" style="padding-top: 9px;padding-right: 18px;padding-bottom: 9px;padding-left: 18px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-family: Helvetica;font-size: 15px;line-height: 150%;text-align: left;" valign="top">
+			                        		
+<!-- TODO DATE OF ISSUE NUMBER -->
 
-			                            <h1 style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 40px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -1px;color: #606060 !important;"><span style="font-size:34px"><span style="color: #000000;">Market Watch - Issue #XX</span></span></h1>
-<!-- TODO DATE OF EMAIL -->
-																	<h3 style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -.5px;color: #606060 !important;"><span style="color:#696969">Month xx - xx, 2015</span></h3>
-
-                                  <h3 style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: italic;line-height: 125%;letter-spacing: -.5px;color: #606060 !important;"><span style="color:#999999; font-style: italic">Margaret Schroder, Editorial Director</span></h3>
-
+			                            <h1 style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 40px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -1px;color: #606060 !important;"><span style="font-size:34px"><span style="color: #000000;">Market Watch - Issue #54</span></span></h1>
+																	<h3 style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -.5px;color: #606060 !important;"><span style="color:#696969">September, 2015</span></h3>
 																	<h3 class="null" style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: -.5px;color: #606060 !important;">&nbsp;</h3>
 
-																	<h3 class="null" style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: normal;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Welcome to the XXst issue of Market Watch, a monthly newsletter to monitor developments relevant to Mozilla's priorities.</span></h3><br>
+<!-- TODO DATE OF ISSUE NUMBER -->
+																	<h3 class="null" style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: normal;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Welcome to the 54th issue of Market Watch, a monthly newsletter to monitor developments relevant to Mozilla's priorities.</span></h3><br>
 
-                                  <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">In this MONTH 2015 issue:</span></h3>
+                                  <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">In this September 2015 issue:</span></h3>
 																	&nbsp;
 
 <!-- TODO TOPIC AREA 1 -->
-																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;color: #808080 !important;">Topic Area 1</h4>
+																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;color: #808080 !important;">Firefox Browser (Kev Needham & Karen Rudnitski)</h4>
 
                                    <ul>
                                      <li><a href="#topic_area_1" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Link goes here</a></li>
@@ -525,7 +524,7 @@
                                  </ul>
 																	&nbsp;
 <!-- TODO TOPIC AREA 2 -->
-                                  <h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;color: #808080 !important;">Topic Area 2</h4>
+                                  <h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;color: #808080 !important;">Firefox OS (Irina Sandu & Rina Jensen)</h4>
 
 																	<ul>
 																		<li><a href="#topic_area_2" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Link goes here</a></li>
@@ -538,7 +537,7 @@
 																</ul>
                                   &nbsp;
 <!-- TODO TOPIC AREA 3 -->
-                                  <h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;color: #808080 !important;">Topic Area 3</h4>
+                                  <h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;color: #808080 !important;">Content Services (Margaret Schroeder)</h4>
 
 																	<ul>
 																		<li><a href="#topic_area_3" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Link goes here</a></li>
@@ -557,8 +556,8 @@
                                   <hr>
                                   <br>
 <!-- TODO TOPIC AREA 1 CONTENT -->
-                                  <h3 id="topic_area_1" class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Topic Area 1</span></h3>
-                                  <h4 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: normal;line-height: 100%;letter-spacing: 0px;color: #000000 !important;"><span style="color:#000000">Author Name</span></h3><br>
+                                  <h3 id="topic_area_1" class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Firefox Browser</span></h3>
+                                  <h4 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: normal;line-height: 100%;letter-spacing: 0px;color: #000000 !important;"><span style="color:#000000">Kev Needham & Karen Rudnitski</span></h3><br>
 																	<br>
 																	<br>
                                   <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Title</span></h3>
@@ -619,7 +618,7 @@
 			                    			</td>
 
 			                    			<td class="mcnTextContent" style="padding-top: 9px;padding-right: 18px;padding-bottom: 36px;padding-left: 18px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #606060;font-family: Helvetica;font-size: 12px;line-height: 150%;text-align: left; font-weight:bold;" valign="top">
-			                    				<a href="mailto:ehunt@mozilla.com?subject=Unsubscribe from Marketplace Design Newsletters" style="color: #606060;font-weight: bold;text-decoration: underline;">Unsubscribe from Market Watch Newsletters</a>
+	
 			                    			</td>
 			                    		</tr>
 
