changed subhead and title
made some things bold and not-bold

--- a/emails/new-template.html
+++ b/emails/new-template.html
@@ -505,11 +505,11 @@
 <!-- TODO DATE OF ISSUE NUMBER -->
 																	<h3 class="null" style="text-align: center;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: normal;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Welcome to the 54th issue of Market Watch, a monthly newsletter to monitor developments relevant to Mozilla's priorities.</span></h3><br>
 
-                                  <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">In this September 2015 issue:</span></h3>
+                                  <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: normal;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">In this September 2015 issue:</span></h3>
 																	&nbsp;
 
 <!-- TODO TOPIC AREA 1 -->
-																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;color: #808080 !important;">Firefox Browser (Kev Needham & Karen Rudnitski)</h4>
+																	<h4 class="null" style="margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: bold;line-height: 100%;letter-spacing: normal;text-align: left;color: #000000 !important;">Firefox Browser (Kev Needham & Karen Rudnitski)</h4>
 
                                    <ul>
                                      <li><a href="#topic_area_1" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Link goes here</a></li>
