--- a/emails/new-template.html
+++ b/emails/new-template.html
@@ -548,12 +548,11 @@
 
                                   <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: normal;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">An archive of previous issues can be found on the <a href="https://WEBSITE" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Market Insights wiki</a>.</span></h3><br>
 
-                                  <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: normal;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Happy Reading, Margaret Schroeder</span></h3><br>
+                                  <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: normal;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Happy Reading,<br>Margaret Schroeder</span></h3><br>
                                   <hr>
                                   <br>
 <!-- TODO TOPIC AREA 1 CONTENT -->
                                   <h3 id="topic_area_1" class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Firefox Browser (Kev Needham & Karen Rudnitski)</span></h3>
-																	<br>
 																	<br>
                                   <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Title</span></h3>
                                   <h4 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: normal;line-height: 125%;letter-spacing: 0px;color: #000000 !important;"><span style="color:#000000">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada mollis ligula, eu hendrerit ipsum maximus at. Cras tincidunt, orci a convallis rhoncus, arcu ligula ultricies eros, et hendrerit justo. </span></h3><a href="https://WEBSITE" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Link Goes Here</a><br>
@@ -570,8 +569,7 @@
                                   <hr>
                                   <br>
 <!-- TODO TOPIC AREA 2 CONTENT -->
-                                  <h3 id="topic_area_2" class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Firefox OS (Irina Sandu & Rina Jensen)</span></h3>														<br>
-																	<br>
+                                  <h3 id="topic_area_2" class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Firefox OS (Irina Sandu & Rina Jensen)</span></h3>																												<br>
                                   <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Title</span></h3>
                                   <h4 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: normal;line-height: 125%;letter-spacing: 0px;color: #000000 !important;"><span style="color:#000000">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada mollis ligula, eu hendrerit ipsum maximus at. Cras tincidunt, orci a convallis rhoncus, arcu ligula ultricies eros, et hendrerit justo. </span></h3><a href="https://WEBSITE" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Link Goes Here</a><br>
                                   <br>
@@ -588,7 +586,6 @@
                                   <br>
 <!-- TODO TOPIC AREA 3 CONTENT -->
                                   <h3 id="topic_area_3" class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Content Services (Margaret Schroeder)</span></h3>														<br>
-																	<br>
                                   <h3 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 18px;font-style: normal;font-weight: bold;line-height: 125%;letter-spacing: 0px;color: #606060 !important;"><span style="color:#000000">Title</span></h3>
                                   <h4 class="null" style="text-align: left;margin: 0;padding: 0;display: block;font-family: Helvetica;font-size: 16px;font-style: normal;font-weight: normal;line-height: 125%;letter-spacing: 0px;color: #000000 !important;"><span style="color:#000000">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada mollis ligula, eu hendrerit ipsum maximus at. Cras tincidunt, orci a convallis rhoncus, arcu ligula ultricies eros, et hendrerit justo. </span></h3><a href="https://WEBSITE" target="_blank" style="word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #6DC6DD;font-weight: normal;text-decoration: underline;">Link Goes Here</a><br>
                                   <br>
